# Jagged

./: .gitignore  CMakeLists.txt  README.md  my_interpreter.vcxproj  my_interpreter.vcxproj.filters  my_programming_lang.sln
JaggedDLL/: GLOBALS.h  MISCELLANEOUS.h
JaggedDLL/classes/: ErrHandler.cpp  ErrHandler.h  parser.cpp  parser.h  tokenizer.cpp  tokenizer.h
JaggedLang/: main.cpp
JaggedLang/test_files/: parse.jgd  tokenize.jgd
src/: GLOBALS.h  main.cpp
src/classes/: ErrHandler.cpp  ErrHandler.h  tokenizer.cpp  tokenizer.h
src/test_files/: tokenize.jgd
